fix checkbox alignment

--- a/src/js/components/sort-titles/sort-titles.styles.css
+++ b/src/js/components/sort-titles/sort-titles.styles.css
@@ -8,3 +8,7 @@
 	font-size: 11px;
 	padding: 10px 0;
 }
+
+.sort-titles .checkbox {
+	margin-left: -2px;
+}
